AC_INIT([libopentmf], [0.1], [reinderfeenstra@gmail.com], [libopentmf], [http://github.com/opentmf/libopentmf])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/opentmf.h])

AM_INIT_AUTOMAKE([foreign])
LT_INIT

AC_PROG_CC
AC_PROG_CC_STDC

AC_CONFIG_FILES( \
  Makefile \
  src/Makefile \
  src/opentmf/Makefile \
)

AC_OUTPUT
